# ai-anvil-tui

./: .gitignore  Cargo.toml  README.md
src/: main.rs  text_source.rs
src/input/: file_system.rs  github.rs  mod.rs  tokenizer.rs
src/output/: clipboard.rs  file.rs  mod.rs
src/ui/: filters.rs  mod.rs  output.rs  output_file.rs  source_files.rs  source_path.rs
