[package]
name = "aianvil-tui"
version = "0.2.0"
edition = "2021"

[dependencies]
url = "2.5"
thiserror = "1.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
tokio = { version = "1.42", features = ["full"] }
once_cell = "1.20"
ratatui = "0.29"
crossterm = "0.28"
walkdir = "2.5"
color-eyre = "0.6"
arboard = "3.4"
octocrab = "0.42"
base64 = "0.22"