[package]
name = "ai-anvil-tui"
version = "0.2.1"
edition = "2021"

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
once_cell = "1.20"
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "2.0"
url = "2.5"
arboard = "3.4"
tiktoken-rs = "0.6"
log = "0.4"
env_logger = "0.11"